Fixed mobile layout bugs

--- a/src/scss/scene.scss
+++ b/src/scss/scene.scss
@@ -10,8 +10,9 @@ body.desktop {
     #thumbnails-container {
         #thumbnails {
             position: absolute;
-            left: -100vw;
+            left    : -100vw;
         }
+
         .thumbnail {
             max-width: 20vw;
             margin   : 0 1vw 3vh 0;
@@ -21,21 +22,46 @@ body.desktop {
 
 body.mobile {
     #ui {
-      #footer {
-        height: 20%;
-      }
-      #fullscreen {
-        top: 69vh;
-      }
-    }
-    #thumbnails-container {
-        #thumbnails {
-            position: absolute;
-            left: -100vw;
+        #footer {
+            height: 20%;
         }
-        .thumbnail {
-            max-width: 40vw;
-            margin   : 0 3vw 5vh 0;
+
+        #next {
+            top: 35vh;
+        }
+
+        #fullscreen {
+            bottom: 15vh;
+            height: 7vh;
+            width: 7vh;
+        }
+
+        #compass-container {
+            top: 3vh;
+            #compass {
+                height: 6vh;
+                width: 6vh;
+            }
+        }
+
+        #thumbnails-container {
+            top: 3vh;
+    
+            #thumbnails-icon {
+                height: 6vh;
+                width: 6vh;
+            }
+
+            #thumbnails {
+                position: absolute;
+                left    : -200vw;
+                height  : 60vh;
+            }
+
+            .thumbnail {
+                max-width: 40vw;
+                margin   : 0 3vw 5vh 0;
+            }
         }
     }
 }
@@ -44,10 +70,19 @@ body.modal {
     a-scene {
         opacity: 0.25;
     }
-    #thumbnails-container #thumbnails {
-        position: static;
-        opacity       : 1;
-        pointer-events: auto;
+
+    #ui {
+        #next, #fullscreen, #compass {
+            opacity: 0;
+        }
+
+        #thumbnails-container {
+            #thumbnails {
+                position      : static;
+                opacity       : 1;
+                pointer-events: auto;
+            }
+        }
     }
 }
 
@@ -59,8 +94,9 @@ body.modal {
     }
 
     #ui {
-        width : 100vw;
-        height: 100vh;
+        opacity: 1;
+        width  : 100vw;
+        height : 100vh;
     }
 
     #black-background {
@@ -80,7 +116,7 @@ body.modal {
     }
     #fullscreen {
         position: fixed;
-        top     : 75vh;
+        bottom     : 10vh;
         right   : 2vw;
         cursor  : pointer;
         height  : 10%;
@@ -159,6 +195,7 @@ body.modal {
         cursor    : pointer;
         transition: opacity 0.5s;
         height    : 8vh;
+        width     : 8vh;
     }
 
     #thumbnails {
@@ -166,6 +203,7 @@ body.modal {
         opacity       : 0;
         pointer-events: none;
         transition    : opacity 0.5s;
+        overflow-y    : auto;
     }
 
     .thumbnail {
